--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.18.0",
     "aws-lambda-fastify": "^1.4.4",
+    "aws-sdk": "^2.924.0",
     "claudia-api-builder": "^4.1.2",
+    "crypto-js": "^4.0.0",
     "fastify": "^3.15.0",
     "fastify-autoload": "^3.7.1",
     "fastify-blipp": "^3.0.0",
     "fastify-decorators": "^3.9.1",
+    "fastify-multipart": "^4.0.6",
     "fastify-plugin": "^3.0.0",
     "fastify-swagger": "^4.7.0",
     "pino-pretty": "^4.7.1"
@@ -34,6 +38,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@types/busboy": "^0.2.3",
     "@types/cors": "^2.8.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.1",
