--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "fastify-multipart": "^4.0.6",
     "fastify-plugin": "^3.0.0",
     "fastify-swagger": "^4.7.0",
-    "pino-pretty": "^4.7.1"
+    "pino-pretty": "^4.7.1",
+    "utilitylayer": "git+https://git-codecommit.ap-southeast-1.amazonaws.com/v1/repos/utility-layer"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
