--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fastify": "^3.15.0",
     "fastify-autoload": "^3.7.1",
     "fastify-blipp": "^3.0.0",
+    "fastify-cors": "^6.0.1",
     "fastify-decorators": "^3.9.1",
     "fastify-multipart": "^4.0.6",
     "fastify-plugin": "^3.0.0",
