--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@aws-sdk/client-s3": "^3.18.0",
     "aws-lambda-fastify": "^1.4.4",
     "aws-sdk": "^2.924.0",
+    "axios": "^0.21.1",
     "claudia-api-builder": "^4.1.2",
     "crypto-js": "^4.0.0",
     "fastify": "^3.15.0",
@@ -34,6 +35,7 @@
     "fastify-multipart": "^4.0.6",
     "fastify-plugin": "^3.0.0",
     "fastify-swagger": "^4.7.0",
+    "node-fetch": "^2.6.1",
     "pino-pretty": "^4.7.1",
     "utility-layer": "git+https://git-codecommit.ap-southeast-1.amazonaws.com/v1/repos/utility-layer#master"
   },
@@ -44,6 +46,7 @@
     "@types/cors": "^2.8.10",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.0.1",
+    "@types/node-fetch": "^2.5.10",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jest-environment-node": "^26.6.2",
