--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fastify-decorators": "^3.9.1",
     "fastify-multipart": "^4.0.6",
     "fastify-plugin": "^3.0.0",
+    "fastify-static": "^4.2.2",
     "fastify-swagger": "^4.7.0",
     "node-fetch": "^2.6.1",
     "pino-pretty": "^4.7.1",
